fixed sign up section stretching.

--- a/styles.css
+++ b/styles.css
@@ -161,13 +161,16 @@ h2{
 
 .sign-box{
     display: flex;
-    justify-content: space-around;
-    align-items:center ;
     padding-top: 30px ;
     padding-bottom: 30px;
+    padding-left: 100px;
+    padding-right: 100px;
     background-color: #3882f6;
     margin: 100px 200px;
     border-radius: 5px;
+    max-width: 800px;
+    max-height: 100px;
+    gap: 100px;
 }
 
 .text-flex{
@@ -196,6 +199,12 @@ h2{
     border-style: solid;
     padding: 5px 25px 5px 25px;
     border-radius: 5px;
+}
+
+.sign-flex-box{
+    display: flex;
+   justify-content: center;
+   
 }
 
 footer{
